appv1.yaml
kind: Service
apiVersion: v1
metadata:
  name: appv1
spec:
  type: LoadBalancer
  selector:
    app: appv1
  ports:
  - protocol: TCP
    port: 8181

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: appv1
  labels:
    app: appv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appv1
  template:
    metadata:
      labels:
        app: appv1
    spec:
      containers:
      - name: appv1
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 8181
